# demistar-ticker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  api.py  config.py  demistar.conf.sample  demistar.py  demiweb.py  http.py  main.py
api/: __init__.py  basic.py  convert.py  error.py  json.py  provider.py
controller/: __init__.py  effects.py  ring.py  timeline.py  wallclock.py
docs/: api.md
driver/: neopixel.py
effects/display/: __init__.py  marquee.py
effects/ring/: __init__.py  base.py  blink.py  breath.py  color.py
http/: __init__.py  provider.py  request.py  response.py  server.py
inc/demi/: color.hpp  led_strip.hpp  periodic_task.hpp  pio.hpp  ws2812.hpp
lang/: __init__.py  en.py  pl.py
src/: main.cpp  ws2812.cpp
stage/: __init__.py  base.py  fxdisp.py  fxring.py  manual.py  meeting.py  wallclock.py
ticker/: Gidotto8.cefo  __init__.py  cefo.py  manager.py  matrix.py  ring.py  storage.py  ticker.py  timeline.py
view/: __init__.py  basic.py  error.py  json.py
web/: __init__.py  provider.py  request.py  response.py  server.py
